test/library/standard/List/classLists/listAppendBorrow.good
listAppendBorrow.chpl:22: In function 'error7':
listAppendBorrow.chpl:23: error: Actual argument arg does not meet called function lifetime constraint
listAppendBorrow.chpl:22: note: consider scope of arg
note: called function list(borrowed foo, false).append(x: borrowed foo)
note: includes lifetime constraint this < x
